noinst_PROGRAMS = simple dict_example hash_test alloc_example iteration interactive

simple_SOURCES = simple.c
simple_LDADD = ../src/libghthash.la
interactive_SOURCES = interactive.c
interactive_LDADD = ../src/libghthash.la
dict_example_SOURCES = dict_example.c
dict_example_LDADD = ../src/libghthash.la
hash_test_SOURCES = hash_test.c
hash_test_LDADD = ../src/libghthash.la
alloc_example_SOURCES = alloc_example.c
alloc_example_LDADD = ../src/libghthash.la
iteration_SOURCES = iteration.c
iteration_LDADD = ../src/libghthash.la

INCLUDES = -I../src

EXTRA_DIST = Makefile.win
